fixed code slides sometimes show scrollbars

--- a/slides/src/styles/main.styl
+++ b/slides/src/styles/main.styl
@@ -42,6 +42,11 @@ pre.source
         > .toolbar
             display: none
 
+section.source
+  padding 0
+  > pre.source
+    padding 0
+
 div > div.code-toolbar > .toolbar
   top -0.2em
 
